# athena

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
data/articles/: 10159088954387-how-to-put-live-tv-on-your-screens-with-optisigns.md  10259143299219-how-to-use-website-screenshot-app.md  11412877112595-what-if-the-optisigns-app-does-not-auto-start-on-an-android-tv.md  12947300131731-show-hide-downloading-status-on-your-player.md  12947820509971-show-hide-offline-indicator-on-your-player.md  13097501958291-optisigns-iot-sensor-add-on-quick-start.md  13320135306515-build-integration-using-optisigns-enterprise-app.md  1500001985341-how-to-use-the-local-folder-app-in-optisigns.md  1500002042241-how-to-use-hdmi-other-video-input-sources-in-with-optisigns.md  1500002131621-how-to-use-youtube-live-with-optisigns.md  1500002233221-how-to-use-asana-app.md  1500005888781-how-to-best-use-canva-with-optisigns.md  1500005889381-how-to-use-the-mindmeister-app.md  1500009343862-how-to-use-the-taggbox-display-app-with-optisigns.md  1500009492202-how-to-use-on-this-day-app.md  1500011611322-how-to-use-the-cbc-news-app.md  15268811715347-cannot-find-the-optisigns-app-on-your-samsung-smart-tv.md  15313086319763-how-to-design-kiosk-apps-using-kiosk-designer-pro.md  15808407287315-the-optisigns-app-keeps-turning-on-the-tv-screen.md  (+181 more)
src/: chunking.py  config.py  logger.py  main.py  markdown_utils.py  models.py  openai_uploader.py  scraper.py  state_backend.py  storage.py
tests/: test_markdown_utils.py  test_state_backend.py  test_storage.py
